# ams

./: .gitignore  LICENSE  README.md  docker-compose.yml  nginx.conf  openapi.json
backend/: Dockerfile  README.md  pyproject.toml  test_main.http  udp_tester.py
backend/app/: main.py
embeded/: CMakeLists.txt  PINOUT.md  README.md
embeded-light/: CMakeLists.txt  PINOUT.md  README.md
embeded-light-esps3/: CMakeLists.txt  PINOUT.md  README.md  sdkconfig.defaults
embeded-light-esps3/main/: CMakeLists.txt  acoustic_runtime.c  audio_calibration_runtime.c  audio_spectrum.c  audio_stream_queue.c  console_helpers.c  device_clock.c  device_config.c  device_status.c  diagnostics_service.c  health_runtime.c  main.c  microphone.c  network_runtime.c  platform_time.c  sd_card_buffer.c  server_health.c  sound_event_uploader.c  startup_helpers.c  time_sync_runtime.c  time_sync_service.c  wifi_service.c
embeded-light-esps3/main/include/: acoustic_runtime.h  audio_calibration.h  audio_spectrum.h  audio_stream_queue.h  audio_types.h  console_helpers.h  device_config.h  device_runtime_config.h  device_status.h  diagnostics_service.h  microphone.h  network_runtime.h  platform_time.h  runtime_status.h  sd_card_buffer.h  server_health.h  sound_event_uploader.h  time_sync_service.h
fronend-main/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
frontend/: README.md  jsconfig.json  nginx.conf  package-lock.json  package.json
frontend-admin/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
(+125 files in other folders)
