idf_component_register(
    SRCS
        "main.c"
        "acoustic_runtime.c"
        "audio_calibration.c"
        "audio_calibration_runtime.c"
        "audio_spectrum.c"
        "audio_stream_queue.c"
        "console_helpers.c"
        "device_clock.c"
        "device_config.c"
        "device_status.c"
        "diagnostics_service.c"
        "health_runtime.c"
        "microphone.c"
        "network_runtime.c"
        "platform_time.c"
        "runtime_status.c"
        "sd_card_buffer.c"
        "server_health.c"
        "sound_event_detector.c"
        "sound_event_uploader.c"
        "startup_helpers.c"
        "time_sync_runtime.c"
        "time_sync_service.c"
        "wifi_service.c"
    INCLUDE_DIRS
        "."
        "include"
    REQUIRES
        esp_driver_gpio
        esp_driver_i2s
        esp_driver_sdspi
        esp_driver_spi
        esp_driver_uart
        esp_event
        esp_http_client
        esp_netif
        esp_timer
        esp_wifi
        nvs_flash
        sdmmc
)

target_link_libraries(${COMPONENT_LIB} m)
